media/css/firefox/releasenotes.less
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.
@import "../sandstone/lib.less";
@import "//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css";
@font-face {
    font-family: 'Font Awesome';
    src: url('/media/fonts/fontawesome-webfont.eot?v4.01#iefix') format('embedded-opentype'), url('/media/fonts/fontawesome-webfont.woff?v4.01') format('woff'), url('/media/fonts/fontawesome-webfont.ttf?v4.01') format('truetype');
    font-weight: normal;
    font-style: normal;
}
#outer-wrapper {
    background: #fff;
    width: 100%;
    padding: 0px;
    margin: 0px;
}

.blank {
    #outer-wrapper {
    background: #FFF;
    width: 100vw;
    padding: 0px;
    margin: 0px;
    }
}
#wrapper {
    padding: 0px;
    margin: 0px;
    width: 100%;
}

#tabzilla:before {
    background-color: #0C99D5;
}
.space #wrapper {
    background-repeat: no-repeat;
    background-position: 0px 180px;
    background-color: white;
    width: 100%;
}
.wrap_pad {
    padding-bottom: 30px;
}
#main-content {
    width: 100%;
    padding: 0px;
    margin: 0px;
}
.release-notes {
    background-color: white;
    width: 100%;
    margin: 0px;
    padding: 0px;
}
.tri-column {
    .span(4);
}
.notes-column {
    width: 100vw;
    text-align: left;
    padding:0px;
    background-color: white;
}
.note_wrapper {
    width: 75%;
    float: right;
}
.label_wrapper {
    width: 25%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    text-transform: uppercase;
}
.release_blurb_wrapper {
    width: 100%;
    float: left;
    text-align: left;
    padding-bottom: 10px;
    padding-top: 5px;
}
.release_details {
    width: 100%;
    height: 100%;
    float: left;
    text-align: center;
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 10px;
    padding-bottom: 20px;
    position: relative;
}
.version_wrapper {
    width: 17%;
    left:0;
    top:0;
    float: left;
    text-align: center;
    position: relative;
    padding-top: 10px;
    display:inline-block;
}
.details_wrapper {
    position: relative;
    float: left;
    text-align: center;
    width: auto;
    padding-left:15%;
    left:0;
    top:0;
    padding-top:1.2em;
    height: 100%;
    display:inline-block;
}
.thank_wrapper {
    position: relative;
    float: left;
    width:70%;
    padding-left:12%;
    text-align: left;
    padding-top: 20px;
    padding-bottom: 10px;
}
.title_text_wrap {
    width: 40%;
    position: relative;
    word-wrap: break-word;
}
.release_details_alt {
    width: 100%;
    height: 100%;
    float: left;
    text-align: center;
    padding-left: 0px;
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    position: relative;
}
.version_wrapper_alt {
    height: 100%;
    width:25%;
    float: left;
    text-align: center;
    position: relative;
    padding-top: 10px;
    display: inline-block;
}
.details_wrapper_alt {
    position: relative;
    float: left;
    padding-top:0em;
    display: inline-block;
    padding-left:10%;
}
.title_text_wrap_alt {
    width: 100%;
    position: relative;
}
.section-wrapper {
    overflow: hidden;
    position: relative;
    width: 100%;
}
.note_wrap {
    padding-left: 20px;
}
#note-media {
    display: none;
}
.gray_note {
    background-color: rgba(223, 236, 250, 0.41);
}
.blue_note {
    background-color: #FFF;
}
.notes-head {
    .clearfix;
    padding-right: 5%;
    padding-left: 5%;
    padding-bottom: 0px;
    padding-top: 10px;
    margin-bottom: @baseLine * 2;
    background-color: #F0F0F0;
    text-align: center;
    p {
        .span(12);
    }
    h1 {
        font-weight: 400;
        font-size: 250%;
        padding-bottom: 15px;
        text-align: center;
    }
    h3 {
        font-weight: 900;
        font-size: 225%;
    }
    h1 {
        margin-bottom: .15em;
    }
    h2 {
        .font-size(1.428em);
        letter-spacing: normal;
        margin-bottom: .75em;
    }
    p {
        margin-bottom: 1em;
    }
}
.space .notes-head {
    background-repeat: no-repeat;
    background-position: top left;
    background-image: url('/media/img/firefox/releasenotes/aurora_small.png');
    background-size: 150px auto;
    padding: 10px 0 0 150px;
}
.blueprint .notes-head {
    h1, h2, p {
        .span(8);
    }
    h1 {
        margin-top: .25em;
        padding-top: 20px;
    }
    h2 {
        margin-bottom: 0em;
    }
}
.note_label {
    text-align: center;
}
.firstPlatform {
    padding-left: 40%;
    padding-right: 5%;
}
#platform {
    overflow: hidden;
    padding-top: 0px;
    width: 100%;
    padding-right: 0px;
    padding-left: 0px;
    text-align: center;
    a {
        color: #000;
    }
    h4 {
        .font-size(30px);
        margin: 0 0 0 0;
        padding: 0;
    }
    ul {
        margin: 0;
        float: left;
        background: #fff;
        width: 100%;
        border-radius: 10px 10px 10px 10px;
    }
    li {
        margin: 0;
        list-style-type: none;
        float: left;
        width: 90px;
    }
    a {} span {
        color: #000;
        border-radius: 0 0 0 0;
        border-bottom: 5px solid rgba(0, 150, 221, 0.7);
    }
    li:first-child {
        padding-right: 1px;
        a, span {
            border-radius: 0 0 0 0;
        }
    }
    a,
    span {
        display: block;
        padding: 12px 16px;
        .open-sans;
        .font-size(15px);
        font-weight: 600;
        text-transform: uppercase;
        border-radius: 0 0 0 0;
    }
}
.space #platform {
    ul {
        padding: 0px;
    }
    a {
        #gradient > .vertical-three-colors(#f2a279, #f28047, 3%, #c63);
    }
    span {
        color: #d79676;
        #gradient > .vertical(#7b3816 14%, #ac5022 95%);
    }
}
a.go:after,
.sidebar a:after {
    content: " »";
    white-space: nowrap;
}
article {
    .clearfix;
}
/* ... */

